getting some views setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Data Source=MvcMovie.db"
+    "TimeTrackerContext": "Data Source=TimeTracker.db"
   }
 }
